<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.ui.usecases.create.AddCardFragment"
    android:fitsSystemWindows="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/dimen_big">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_add_card_tittle"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_big"
                android:layout_marginBottom="@dimen/dimen_mid"
                android:text="@string/add_card"
                app:layout_constraintBottom_toTopOf="@id/add_new_card_separator"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/add_new_card_separator"
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:layout_marginVertical="@dimen/dimen_big"
                android:background="@color/design_default_color_primary"
                app:layout_constraintTop_toBottomOf="@id/tv_add_card_tittle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@id/til_add_card_name"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_add_card_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                app:layout_constraintTop_toBottomOf="@id/add_new_card_separator"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@id/sp_add_card_store_type">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_add_card_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/store_name"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"/>

            </com.google.android.material.textfield.TextInputLayout>


            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/sp_add_card_store_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_mid"
                android:minHeight="48dp"
                app:layout_constraintBottom_toTopOf="@id/til_add_card_notes"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_add_card_name" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_add_card_notes"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_mid"

                app:layout_constraintBottom_toTopOf="@id/btn_scan_new_card"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sp_add_card_store_type">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_add_card_notes"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/store_notes"
                    android:lines="5" />

            </com.google.android.material.textfield.TextInputLayout>



            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_scan_new_card"
                android:layout_width="@dimen/btn_width"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_mid"
                android:layout_marginBottom="@dimen/dimen_hiper"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_add_card_notes"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/scan_card"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</FrameLayout>
